--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Day 1 -->
   <div class="itinerary-day">
     <div class="day-image">
-      <img src="images/shimla.jpg" alt="Shimla" onclick="openLightbox('images/shimla.jpg')">
+      <img src="images/shimla.jpg" alt="Shimla" onclick="openLightbox(this)">
       <div class="day-overlay">
         <h2>Sunday, 17th August 2025</h2>
         <h3>Day 1 – Chandigarh → Shimla</h3>
@@ -46,7 +46,7 @@
   <!-- Day 2 -->
   <div class="itinerary-day">
     <div class="day-image">
-      <img src="images/sangla1.jpg" alt="Sangla" onclick="openLightbox('images/sangla.jpg')">
+      <img src="images/sangla1.jpg" alt="Sangla" onclick="openLightbox(this)">
       <div class="day-overlay">
         <h2>Monday, 18th August 2025</h2>
         <h3>Day 2 – Shimla → Sangla</h3>
@@ -60,7 +60,7 @@
   <!-- Day 3 -->
   <div class="itinerary-day">
     <div class="day-image">
-      <img src="images/chitkul.jpg" alt="Chitkul" onclick="openLightbox('images/chitkul.jpg')">
+      <img src="images/chitkul.jpg" alt="Chitkul" onclick="openLightbox(this)">
       <div class="day-overlay">
         <h2>Tuesday, 19th August 2025</h2>
         <h3>Day 3 – Sangla → Chitkul → Kalpa</h3>
@@ -74,7 +74,7 @@
   <!-- Day 4 -->
   <div class="itinerary-day">
     <div class="day-image">
-      <img src="images/tabo.jpg" alt="Tabo Monastery" onclick="openLightbox('images/tabo.jpg')">
+      <img src="images/tabo.jpg" alt="Tabo Monastery" onclick="openLightbox(this)">
       <div class="day-overlay">
         <h2>Wednesday, 20th August 2025</h2>
         <h3>Day 4 – Kalpa → Kaza</h3>
@@ -88,7 +88,7 @@
   <!-- Day 5 -->
   <div class="itinerary-day">
     <div class="day-image">
-      <img src="images/key_monastery.jpg" alt="Key Monastery" onclick="openLightbox('images/key_monastery.jpg')">
+      <img src="images/key_monastery.jpg" alt="Key Monastery" onclick="openLightbox(this)">
       <div class="day-overlay">
         <h2>Thursday, 21st August 2025</h2>
         <h3>Day 5 – Kaza Sightseeing</h3>
@@ -102,7 +102,7 @@
   <!-- Day 6 -->
   <div class="itinerary-day">
     <div class="day-image">
-      <img src="images/chandratal1.jpg" alt="Chandratal Lake" onclick="openLightbox('images/chandratal.jpg')">
+      <img src="images/chandratal1.jpg" alt="Chandratal Lake" onclick="openLightbox(this)">
       <div class="day-overlay">
         <h2>Friday, 22nd August 2025</h2>
         <h3>Day 6 – Kaza → Chandrataal</h3>
@@ -116,7 +116,7 @@
   <!-- Day 7 -->
   <div class="itinerary-day">
     <div class="day-image">
-      <img src="images/manali.jpg" alt="Manali" onclick="openLightbox('images/manali.jpg')">
+      <img src="images/manali.jpg" alt="Manali" onclick="openLightbox(this)">
       <div class="day-overlay">
         <h2>Saturday, 23rd August 2025</h2>
         <h3>Day 7 – Chandrataal → Manali</h3>
@@ -130,7 +130,7 @@
   <!-- Day 8 -->
   <div class="itinerary-day">
     <div class="day-image">
-      <img src="images/kullu.jpg" alt="Kullu Valley" onclick="openLightbox('images/kullu.jpg')">
+      <img src="images/kullu.jpg" alt="Kullu Valley" onclick="openLightbox(this)">
       <div class="day-overlay">
         <h2>Sunday, 24th August 2025</h2>
         <h3>Day 8 – Manali → Chandigarh</h3>
