--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </div>
 
 </div>
-
+<!-- PDF Export Button -->
 <!-- Accommodation Section -->
 <!-- Accommodation Section -->
 <div class="full-section">
@@ -262,7 +262,10 @@
     <li>Extra charges for Rohtang pass</li>
   </ul>
 </div>
-
+<!-- PDF Button -->
+<div style="text-align:center;">
+  <a href="javascript:window.print()" class="pdf-btn">📥 Download PDF</a>
+</div>
 <!-- Terms & Conditions Section -->
 <div class="full-section terms">
   <div class="terms-bg"></div> <!-- Background watermark layer -->
